# 42-woody-woodpacker

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: woody_woodpacker.h
program/: Makefile  tmpwoody  woody
program/include/: elf.h  woody_woodpacker.h
program/src/: common.c  elf.c  elf_header.c  elf_program_header.c  elf_section_header.c  file.c  ident.c  main.c  packer.c  packer_config.c  payload_32.asm  payload_64.asm  payloads.asm
program/src/elf/: ehdr.c  phdr.c  shdr.c
program/src/encryption/: decrypt_64.asm
program/src/helper/: file.c
program/src/payload/: entry_32.asm  entry_64.asm
program/test/: simple.c
sandbox/: Makefile
sandbox/compression/: .gitignore  Makefile  test.sh
sandbox/compression/doc/: Huffman Coding: A CS2 Assignment.html  rle.html
sandbox/compression/doc/Huffman Coding: A CS2 Assignment_files/: h.css
sandbox/compression/include/: common.h  dhe.h  jbe.h  mtf.h  rle.h
sandbox/compression/src/: check_frequency.c  common.c  dhe.c  dhe_decode.c  dhe_encode.c  end.c  file.c  get_binary_weight.c  intro.c  jbe.c  jbe_decode.c  jbe_encode.c  mtf.c  mtf_decode.c  mtf_encode.c  rle.c  rle_decode.c  rle_encode.c
sandbox/encrypt/: Makefile  c  encrypt
sandbox/encrypt/src/: main.c  rc4.asm
sandbox/src/: encrypt.c  main.c  payload.c  payloads.asm
sandbox/test32write/: Makefile  compile  main.c  writer.s
sandbox/test32write/src/: main.c  writer.asm
src/: entry.s  main.c  payloads.asm
