cmake_minimum_required(VERSION 3.15)
project(42_woody_woodpacker C)

set(CMAKE_C_STANDARD 11)

include_directories(program/include)
include_directories(program/libft_ng/includes)
include_directories(program/libft_ng/srcs/binary_tree)
include_directories(program/libft_ng/srcs/ft_printf)
include_directories(program/libft_ng/srcs/gnl)
include_directories(sandbox/include)

add_executable(42_woody_woodpacker
        program/include/woody_woodpacker.h
        program/libft_ng/includes/btree.h
        program/libft_ng/includes/chained_tools.h
        program/libft_ng/includes/custom_allocator.h
        program/libft_ng/includes/gnl.h
        program/libft_ng/includes/libft.h
        program/libft_ng/includes/sort_tools.h
        program/libft_ng/srcs/binary_tree/btree_apply_by_level.c
        program/libft_ng/srcs/binary_tree/btree_apply_infix.c
        program/libft_ng/srcs/binary_tree/btree_apply_prefix.c
        program/libft_ng/srcs/binary_tree/btree_apply_suffix.c
        program/libft_ng/srcs/binary_tree/btree_atomics_op.c
        program/libft_ng/srcs/binary_tree/btree_check_binary_tree.c
        program/libft_ng/srcs/binary_tree/btree_check_rnb_property.c
        program/libft_ng/srcs/binary_tree/btree_conditional_insert.c
        program/libft_ng/srcs/binary_tree/btree_ctor.c
        program/libft_ng/srcs/binary_tree/btree_delete_node.c
        program/libft_ng/srcs/binary_tree/btree_delete_rnb_node.c
        program/libft_ng/srcs/binary_tree/btree_delete_strategy.c
        program/libft_ng/srcs/binary_tree/btree_family_node.c
        program/libft_ng/srcs/binary_tree/btree_get_last_valid.c
        program/libft_ng/srcs/binary_tree/btree_get_neighbours.c
        program/libft_ng/srcs/binary_tree/btree_get_node.c
        program/libft_ng/srcs/binary_tree/btree_insert_node.c
        program/libft_ng/srcs/binary_tree/btree_insert_rnb_node.c
        program/libft_ng/srcs/binary_tree/btree_insert_strategy.c
        program/libft_ng/srcs/binary_tree/btree_internal_header.h
        program/libft_ng/srcs/binary_tree/btree_level_count.c
        program/libft_ng/srcs/binary_tree/btree_limit_items.c
        program/libft_ng/srcs/binary_tree/btree_memory_move.c
        program/libft_ng/srcs/binary_tree/btree_rotation_node.c
        program/libft_ng/srcs/binary_tree/btree_smash_checker.c
        program/libft_ng/srcs/chained_tools/lst_add.c
        program/libft_ng/srcs/chained_tools/lst_create_elem.c
        program/libft_ng/srcs/chained_tools/lst_del.c
        program/libft_ng/srcs/chained_tools/lst_del_one.c
        program/libft_ng/srcs/chained_tools/lst_invert_it.c
        program/libft_ng/srcs/chained_tools/lst_invert_rec.c
        program/libft_ng/srcs/chained_tools/lst_iter.c
        program/libft_ng/srcs/chained_tools/lst_map.c
        program/libft_ng/srcs/chained_tools/lst_merge.c
        program/libft_ng/srcs/chained_tools/lst_new.c
        program/libft_ng/srcs/chained_tools/lst_pre_alloc.c
        program/libft_ng/srcs/chained_tools/lst_push_back.c
        program/libft_ng/srcs/chained_tools/lst_push_front.c
        program/libft_ng/srcs/ft_printf/beacon.c
        program/libft_ng/srcs/ft_printf/buffer.c
        program/libft_ng/srcs/ft_printf/cast.c
        program/libft_ng/srcs/ft_printf/extract_args.c
        program/libft_ng/srcs/ft_printf/internal_printf.h
        program/libft_ng/srcs/ft_printf/modifiers.c
        program/libft_ng/srcs/ft_printf/norme.c
        program/libft_ng/srcs/ft_printf/op_main.c
        program/libft_ng/srcs/ft_printf/s_char.c
        program/libft_ng/srcs/ft_printf/s_logical_b.c
        program/libft_ng/srcs/ft_printf/s_logical_o.c
        program/libft_ng/srcs/ft_printf/s_logical_xmaj.c
        program/libft_ng/srcs/ft_printf/s_logical_xmin.c
        program/libft_ng/srcs/ft_printf/s_numeric_i.c
        program/libft_ng/srcs/ft_printf/s_numeric_u.c
        program/libft_ng/srcs/ft_printf/s_pointer.c
        program/libft_ng/srcs/ft_printf/s_string.c
        program/libft_ng/srcs/gnl/gnl.c
        program/libft_ng/srcs/gnl/private_gnl.h
        program/libft_ng/srcs/sort_tools/fusion_merge_chain_list.c
        program/libft_ng/srcs/sort_tools/fusion_merge_tab.c
        program/libft_ng/srcs/usuals_tools/ft_aligned_bzero.c
        program/libft_ng/srcs/usuals_tools/ft_aligned_memcpy.c
        program/libft_ng/srcs/usuals_tools/ft_atoi.c
        program/libft_ng/srcs/usuals_tools/ft_bzero.c
        program/libft_ng/srcs/usuals_tools/ft_isalnum.c
        program/libft_ng/srcs/usuals_tools/ft_isalpha.c
        program/libft_ng/srcs/usuals_tools/ft_isascii.c
        program/libft_ng/srcs/usuals_tools/ft_isdigit.c
        program/libft_ng/srcs/usuals_tools/ft_isprint.c
        program/libft_ng/srcs/usuals_tools/ft_memccpy.c
        program/libft_ng/srcs/usuals_tools/ft_memchr.c
        program/libft_ng/srcs/usuals_tools/ft_memcmp.c
        program/libft_ng/srcs/usuals_tools/ft_memcpy.c
        program/libft_ng/srcs/usuals_tools/ft_memmove.c
        program/libft_ng/srcs/usuals_tools/ft_memset.c
        program/libft_ng/srcs/usuals_tools/ft_putchar.c
        program/libft_ng/srcs/usuals_tools/ft_putchar_fd.c
        program/libft_ng/srcs/usuals_tools/ft_putendl.c
        program/libft_ng/srcs/usuals_tools/ft_putendl_fd.c
        program/libft_ng/srcs/usuals_tools/ft_putnbr.c
        program/libft_ng/srcs/usuals_tools/ft_putnbr_fd.c
        program/libft_ng/srcs/usuals_tools/ft_putstr.c
        program/libft_ng/srcs/usuals_tools/ft_putstr_fd.c
        program/libft_ng/srcs/usuals_tools/ft_secure_atoi.c
        program/libft_ng/srcs/usuals_tools/ft_strcat.c
        program/libft_ng/srcs/usuals_tools/ft_strchr.c
        program/libft_ng/srcs/usuals_tools/ft_strclr.c
        program/libft_ng/srcs/usuals_tools/ft_strcmp.c
        program/libft_ng/srcs/usuals_tools/ft_strcpy.c
        program/libft_ng/srcs/usuals_tools/ft_strequ.c
        program/libft_ng/srcs/usuals_tools/ft_striter.c
        program/libft_ng/srcs/usuals_tools/ft_striteri.c
        program/libft_ng/srcs/usuals_tools/ft_strlcat.c
        program/libft_ng/srcs/usuals_tools/ft_strlen.c
        program/libft_ng/srcs/usuals_tools/ft_strncat.c
        program/libft_ng/srcs/usuals_tools/ft_strncmp.c
        program/libft_ng/srcs/usuals_tools/ft_strncpy.c
        program/libft_ng/srcs/usuals_tools/ft_strnequ.c
        program/libft_ng/srcs/usuals_tools/ft_strnstr.c
        program/libft_ng/srcs/usuals_tools/ft_strrchr.c
        program/libft_ng/srcs/usuals_tools/ft_strstr.c
        program/libft_ng/srcs/usuals_tools/ft_tolower.c
        program/libft_ng/srcs/usuals_tools/ft_toupper.c
        program/src/common.c
        program/src/elf.c
        program/src/elf_header.c
        program/src/elf_section_header.c
        program/src/main.c
        ressources/sample.c
        sandbox/include/woody_woodpacker.h
        sandbox/src/main.c)
